--- a/.github/workflows/ci_front.yml
+++ b/.github/workflows/ci_front.yml
@@ -1,19 +1,23 @@
-name: CI
+name: CI (Frontend)
 
 on:
   push:
     branches: [master]
+    paths:
+      - webapp/**
   pull_request:
     branches: [master]
+    paths:
+      - webapp/**
   workflow_dispatch:
 
 jobs:
-  webapp_test:
+  test:
     defaults:
       run:
         working-directory: ./webapp
 
-    name: Run Tests (Webapp)
+    name: Run Tests (Frontend)
     runs-on: ubuntu-latest
 
     steps:
@@ -30,26 +34,6 @@ jobs:
 
       - name: Run Linter
         run: yarn lint
-      
-  backend_test:
-    defaults:
-      run:
-        working-directory: ./backend
 
-    name: Run Tests (Backend)
-    runs-on: ubuntu-latest
-
-    steps:
-      - name: Checkout the Repository
-        uses: actions/checkout@v2
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v1
-        with:
-          node-version: 12.x
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Run Linter
-        run: npm run lint
+      - name: Run Build
+        run: yarn build
