--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
-    "keyv": "^4.0.3"
+    "keyv": "^4.0.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "eslint": "^7.21.0",
