--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@greencoast/logger": "^1.0.1",
     "@keyv/sqlite": "^2.0.2",
+    "body-parser": "^1.19.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
