--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "express": "^4.17.1",
     "joi": "^17.4.0",
     "keyv": "^4.0.3",
+    "on-finished": "^2.3.0",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
