--- a/webapp/package.json
+++ b/webapp/package.json
@@ -4,11 +4,13 @@
   "description": "Web frontend to serve the benchmark tool.",
   "private": true,
   "dependencies": {
+    "@reactchartjs/react-chart.js": "^1.0.0-rc.3",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
     "axios": "^0.21.1",
     "bootstrap": "^4.6.0",
+    "chart.js": "^2.9.4",
     "dotenv": "^8.2.0",
     "gpu.js": "^2.11.2",
     "node-sass": "^5.0.0",
