--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
     "@greencoast/logger": "^1.0.1",
     "@keyv/sqlite": "^2.0.2",
     "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "joi": "^17.4.0",
