--- a/webapp/package.json
+++ b/webapp/package.json
@@ -17,6 +17,7 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-bootstrap": "^1.5.1",
+    "react-bootstrap-range-slider": "^2.0.2",
     "react-dom": "^17.0.1",
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
